[gd_scene load_steps=9 format=2]

[ext_resource path="res://asset/cerita/scene7/scene_7.png" type="Texture" id=1]
[ext_resource path="res://cerita/cerita.tscn" type="PackedScene" id=2]
[ext_resource path="res://asset/cerita/scene7/01Peramal_Scene7.wav" type="AudioStream" id=3]
[ext_resource path="res://asset/cerita/scene7/02Mataram_Scene7.wav" type="AudioStream" id=4]
[ext_resource path="res://asset/cerita/scene7/Narasi_Scene7.wav" type="AudioStream" id=5]
[ext_resource path="res://cerita/font.tres" type="DynamicFont" id=6]
[ext_resource path="res://cerita/dialog.tres" type="DynamicFont" id=7]
[ext_resource path="res://cerita/scene7/Scene7.gd" type="Script" id=8]

[node name="Scene7" instance=ExtResource( 2 )]
script = ExtResource( 8 )

[node name="TextureRect" parent="Control" index="0"]
texture = ExtResource( 1 )

[node name="Panel" parent="Control" index="1"]
margin_left = 168.0
margin_top = 24.0
margin_right = 1120.0
margin_bottom = 136.0

[node name="narasi" type="Label" parent="Control/Panel" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Orang Kayo Hitam dikenal amat sakti, sehingga raja mataram meminta bantuan 
peramal kerajaan untuk mengetahui kelemahan orang kayo hitam. "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialog" type="Label" parent="Control" index="2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 64.0
margin_top = 240.0
margin_right = 474.0
margin_bottom = 368.0
custom_fonts/font = ExtResource( 7 )
text = "“Ampun tuanku, orang kayo hitam 
hanya bisa dikalahkan dengan sebuah keris 
yang terbuat dari logam yang berawal Pa”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialog2" type="Label" parent="Control" index="3"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 888.0
margin_top = 224.0
margin_right = 1148.0
margin_bottom = 285.0
custom_fonts/font = ExtResource( 7 )
text = "“ Sekarang pergilah, 
segera buat keris tersebut” "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialog3" type="Label" parent="Control" index="4"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 880.0
margin_top = 224.0
margin_right = 1338.0
margin_bottom = 285.0
custom_fonts/font = ExtResource( 7 )
text = "“Ha..ha..ha...
akan ku taklukan Orang kayo hitam”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="narasi" type="AudioStreamPlayer" parent="." index="1"]
stream = ExtResource( 5 )
autoplay = true

[node name="dialog" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource( 3 )

[node name="dialog2" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 4 )

[node name="Tween" type="Tween" parent="." index="4"]
[connection signal="finished" from="narasi" to="." method="_on_narasi_finished"]
[connection signal="finished" from="dialog" to="." method="_on_dialog_finished"]
[connection signal="finished" from="dialog2" to="." method="_on_dialog2_finished"]
